plugins {
    id "java-library"
    id "maven-publish"
}

repositories {
    mavenCentral()
    maven {
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }
    maven {
        url = uri('https://maven.enginehub.org/repo/')
    }
    maven {
        url = uri('https://repo.essentialsx.net/releases/')
    }
    maven {
        url = uri('https://jitpack.io')
    }
}

dependencies {
    compileOnly 'org.jetbrains:annotations:24.0.1'
    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.3.0-SNAPSHOT'
    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.5-SNAPSHOT'
    compileOnly 'org.spigotmc:spigot-api:1.18.1-R0.1-SNAPSHOT'
    compileOnly 'net.essentialsx:EssentialsX:2.19.0'
    compileOnly 'com.github.Flowsqy:ComponentReplacer:1.0.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

archivesBaseName = "StelyClaim"
group = "fr.flowsqy.stelyclaim"
version = "3.0.1-SNAPSHOT"

publishing {
    publications {
        maven(MavenPublication) {
            groupId = project.group
            artifactId = project.archivesBaseName
            version = project.version
            from components.java
        }
    }
}

processResources {
    expand("version": version)
}
